# phillips-curve-dashboard

./: README.md  main.py  pyproject.toml
src/phillips_curve/: charts.py  dashboard.py  data_loader.py
