[project]
name = "phillips-curve"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Christophe Benz", email = "christophe.benz@nomics.world" }]
dependencies = ["dbnomics", "streamlit", "plotly", "pandas", "numpy"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/phillips_curve"]
