[project]
name = "phillips-curve"
version = "0.1.0"
description = "Phillips curve dashboard with DBnomics data"
authors = [
    { name = "Juliette Bornier", email = "juliette.bornier.3110@gmail.com" },
]
dependencies = [
    "dbnomics>=1.2.5",
    "streamlit>=1.36.0",
    "plotly>=5.22.0",
    "pandas>=2.2.2",
    "numpy>=2.0.0",
    "streamlit-option-menu>=0.3.13",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/phillips_curve"]
